portfolio latest updates

--- a/index.html
+++ b/index.html
@@ -192,6 +192,35 @@
         <div class="row portfolio-container">
 
 <!-- STRart -->
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href=""><img src="./assets/img/Untitled-new1.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Graphic Design Works</h4>
+    <p>Card 1</p>
+    <a href="" class="preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href=""><img src="./assets/img/camera jnjnnraw.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Graphic Design Works</h4>
+    <p>Card 1</p>
+    <a href="" class="preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href=""><img src="./assets/img/kmkjjikjik.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Graphic Design Works</h4>
+    <p>Card 1</p>
+    <a href="" class="preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <a href=""><img src="./assets/ilovepdf_pages-to-jpg/GRAPHIC DESIGN WORKS ABHIRAJ_pages-to-jpg-0001.jpg" class="img-fluid" alt=""></a>
             <div class="portfolio-info">
