--- a/index.html
+++ b/index.html
@@ -278,6 +278,47 @@
   </div>
 </div>
 
+<!-- Edi/t -->
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href="https://www.figma.com/design/8I2p5tkoCpIhOBu1pLV2AI/Case-Study-1?node-id=0-1&t=mHfF8hMMkulWEyfH-1"><img src="./assets/img/Case Study 1.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Case Study </h4>
+    <p>Card 7</p>
+    <a href="https://www.figma.com/design/8I2p5tkoCpIhOBu1pLV2AI/Case-Study-1?node-id=0-1&t=mHfF8hMMkulWEyfH-1" class="preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
+
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href="https://www.figma.com/design/Ln2PiZ7rnBDNSkIdqK2ZlX/Case-Study-2?t=mHfF8hMMkulWEyfH-1"><img src="./assets/img/Case Study 2.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Case Study </h4>
+    <p>Card 8</p>
+    <a href="https://www.figma.com/design/Ln2PiZ7rnBDNSkIdqK2ZlX/Case-Study-2?t=mHfF8hMMkulWEyfH-1" class="preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href="https://www.figma.com/design/ey2yttzbW9i5PSyEX8KTPj/Case-Study-3?t=mHfF8hMMkulWEyfH-1"><img src="./assets/img/Case Study 3.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Case Study</h4>
+    <p>Card 4</p>
+    <a href="https://www.figma.com/design/ey2yttzbW9i5PSyEX8KTPj/Case-Study-3?t=mHfF8hMMkulWEyfH-1" class="preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+  <a href="https://www.figma.com/design/j9Vm2ZzMOjVov9OBprZx3Q/Redesign?t=mHfF8hMMkulWEyfH-1"><img src="./assets/img/Redesign.png" class="img-fluid" alt=""></a>
+  <div class="portfolio-info">
+    <h4>Redesign</h4>
+    <p>Card 4</p>
+    <a href="https://www.figma.com/design/ey2yttzbW9i5PSyEX8KTPj/Case-Study-3?t=mHfF8hMMkulWEyfH-1" class="preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+  </div>
+</div>
+
 
 <div class="col-lg-4 col-md-6 portfolio-item filter-card">
   <a href="https://www.figma.com/proto/RW9GRBUya7jQWxLlOCq0ZP/Carousel-Animation?node-id=526-328&starting-point-node-id=520%3A171&scaling=scale-down&content-scaling=fixed&t=SOeKVgh1DgMB2j34-1"><img src="./assets/img/nature.png" class="img-fluid" alt=""></a>
